--- a/champ.html
+++ b/champ.html
@@ -12,6 +12,7 @@
 
 <body>
     <div id="selchamp">
+        <a id='back' href="index.html">Pagina incial</a>
         <div id="inpchamp">
             <label for="input_champ">Campeões:</label>
             <select type="text" id="input_champ" style="width: 200px;">
