--- a/index.html
+++ b/index.html
@@ -26,18 +26,18 @@
         </div>
         <div id="links_principal">
             <div>
-                <a href="champ.html" target="_blank">Champs <br><img
+                <a href="champ.html">Champs <br><img
                         src="https://vignette.wikia.nocookie.net/leagueoflegends/images/e/ea/Sion_OriginalSquare.png/revision/latest/scale-to-width-down/46?cb=20150402221054"
                         alt=""></a>
             </div>
             <div>
-                <a href="sobre.html" target="_blank">Poropédia <br><img
+                <a href="sobre.html">Poropédia <br><img
                         src="https://vignette.wikia.nocookie.net/leagueoflegends/images/3/38/Baron_NashorSquare.png/revision/latest/scale-to-width-down/20?cb=20140620025404"
                         alt=""></a>
 
             </div>
             <div>
-                <a href="item.html" target="_blank">Itens <br><img
+                <a href="item.html">Itens <br><img
                         src="https://vignette.wikia.nocookie.net/leagueoflegends/images/c/c5/Rabadon%27s_Deathcap_item.png/revision/latest/scale-to-width-down/40?cb=20171221230209"
                         alt=""></a>
             </div>
