--- a/item.html
+++ b/item.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+
     <div id="container">
         <div id="d1" class="divs">
 
@@ -22,7 +23,9 @@
 
         </div>
         <div id="d3" class="divs">
+            <a id='back' href="index.html">Pagina incial</a>
             <div id="titulo_items">
+
                 <p id="tit_item">Upgrades</p>
             </div>
             <div id="into">
