--- a/sobre.html
+++ b/sobre.html
@@ -19,6 +19,7 @@
         </div>
 
         <div id="texto" class="divs">
+            <a id='back' href="index.html">Pagina incial</a>
             <div class="dv">
                 <h2>Curiosidades sobre os Poros</h2>
                 <p>Poros são compostos por partes iguais de verdade, coragem e inocência</p>
